--- a/latex/main.tex
+++ b/latex/main.tex
@@ -843,7 +843,7 @@ Ved at tilpasse Accot og Zhai's $ID$ til vores 264 testdeltageres spiralopgaver 
 \label{eq:accotspiral}
 \end{align}
 
-Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers tilpasning til spiralopgaver, ved at bruge gennemsnits tiden for hver $ID$ som datapunkter. De fem affine kurver og tilhørende fire datapunkter kan ses i figur \ref{fig:welford_spiral_line}-\ref{fig:accot_spiral_line}.\\
+Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers tilpasning til spiralopgaver, ved at bruge gennemsnits tiden for hver $ID$ som datapunkter. De fem affine kurver og tilhørende fire datapunkter kan ses i figur \ref{fig:welford_spiral_line}-\ref{fig:accot_spiral_line}.\\\\
 \begin{minipage}[t]{\linewidth}
 	\begin{minipage}[t]{0.45\linewidth}
 		\begin{tabular}{lll}
