--- a/latex/preface.tex
+++ b/latex/preface.tex
@@ -26,6 +26,7 @@
 \usepackage{hyperref}
 \usepackage{listings}
 \usepackage{color}
+\usepackage{wrapfig}
 
 %-- Code listings --%
 \definecolor{codegreen}{rgb}{0,0.6,0}
