PUSH OG PUSH OG PUSH OG POP POP POP

--- a/latex/appendices.tex
+++ b/latex/appendices.tex
@@ -155,6 +155,88 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 \label{fig:ex_step_7_sending}
 \end{minipage}
 
+%-- Kvalitativ analyse --%
+\newpage
+\chapter{Testdeltageres bevægelsesbaner}
+
+\begin{minipage}{\textwidth}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_1}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_2}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_3}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_4}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_5}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_6}
+	\end{minipage}	
+	\captionof{figure}{6 testdeltageres bevægelsesbaner for de 25 pegeopgaver}
+	\label{fig:kvaliativ_persons_1}
+\end{minipage}
+
+
+\begin{minipage}{\textwidth}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_7}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_8}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_9}
+	\end{minipage}
+		\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_10}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_11}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_12}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_13}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_14}
+	\end{minipage}
+	\captionof{figure}{8 testdeltageres bevægelsesbaner for de 25 pegeopgaver}
+	\label{fig:kvaliativ_persons_2}
+\end{minipage}
+
+
+\begin{minipage}{\textwidth}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_15}
+	\end{minipage}
+		\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_16}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_17}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_18}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_19}
+	\end{minipage}
+	\begin{minipage}{0.5\linewidth}
+		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_20}
+	\end{minipage}
+	\captionof{figure}{6 testdeltageres bevægelsesbaner for de 25 pegeopgaver}
+	\label{fig:kvaliativ_persons_3}
+\end{minipage}
+
+
 %-- R-kode --%
 \newpage
 \chapter{R-kode fra analyse}
