--- a/latex/main.tex
+++ b/latex/main.tex
@@ -938,11 +938,11 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 \newpage
 \addcontentsline{toc}{section}{modelanalyse af hastighedsprofiler}
 \section*{Modelanalyse af hastighedsprofiler}
-Vores modelanalyse af hastighedsprofiler tager udgangspunkt i en kvalitativ og efterfølgende kvantitativ analyse af de indsamlede bevægelsesbaner fra crowdsourcingdeltagernes pegeopgaver.
+Vores modelanalyse af hastighedsprofiler tager udgangspunkt i en kvalitativ analyse. Vi vil gennemgå testdeltagernes spørgeskemasvar og bevægelsesbaner for pegeopgaverne, for at finde eventuelle tendenser, som vi kan opstille hypoteser ud fra. Hypoteserne vil vi så forsøge, at be- eller afkræfte ved statistisk og beregninger i en efterfølgende kvantitativ analyse
 
 \addcontentsline{toc}{subsection}{Kvalitativ analyse}
 \subsection*{Kvalitativ analyse}
-Vi har valgt at udføre en kvalitativ analyse af bevægelsesbanerne og testdeltagernes spørgeskemaer, da det vil give os et større overblik over den indsamlede data og vise os hvilke tendenser der kan observeres.
+Vi har valgt at udføre en kvalitativ analyse af bevægelsesbanerne og testdeltagernes spørgeskemaer, da det vil give et større overblik over den indsamlede data og vise, hvilke eventuelle tendenser, der kan observeres.
 Den kvalitative analyse bygger på 57 tilfældige crowdsourcingdeltagerne, hvilket svarer til cirka $21\%$ af deltagerne. Af de 57 deltagere angav 32 at de brugte mus, mens 25 angav at deres pegeredskab var touchpad. Disse tal stemmer overens den procentvise fordeling af pegeenhed for alle testdeltagere, vist i tabel \ref{tab:persons_average}. Vores observationer baserer sig på bevægelsesbanerne for hver deltager, et eksempel herpå ses i figur \ref{fig:movement_random_person}.
 
 Vi har observeret at deltagerne tager en stor underbevægelse, eventuelt opfulgt af mindre korrigerende underbevægelser. Typisk vil der for muse-brugerne være én korrigerende underbevægelse, mens touchpad-brugerne ofte bruger flere korrigerende underbevægelser. Generelt har muse-brugerne også mindre udsving i deres bevægelsesbaner end touchpad-brugerne. Dertil var der flere deltagere som startede enkelte baner, med at bevæge pegeredskabet i en forkert retning.
