fuck Det her lort!

--- a/latex/appendices.tex
+++ b/latex/appendices.tex
@@ -155,6 +155,11 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 \label{fig:ex_step_7_sending}
 \end{minipage}
 
+%-- Plots til kvalitativ analyse --%
+\newpage
+\chapter{Kvalitativ analyse plots}
+
+
 %-- R-kode --%
 \newpage
 \chapter{R-kode fra analyse}
