--- a/latex/appendices.tex
+++ b/latex/appendices.tex
@@ -2,6 +2,7 @@
 
 %-- Drejebog --%
 \chapter{Drejebog for laboratorieeksperiment}
+\label{sec:drejebog}
 \subsection*{Udstyr}
 \begin{itemize}
 \item{Computer med Google Chrome browseren}
@@ -29,6 +30,7 @@
 
 %-- Tekst til crowdsourcing --%
 \chapter{Tekst til crowdsourcing}
+\label{sec:crowdsource-text}
 For at crowdsource vores eksperiment har vi delt følgende tekst:
 \\\\\textit{"Hej,\\ vi er tre datalogi studerende ved Københavns Universitet, som er i gang med vores bacheloropgave. For at kunne have nogle data at analysere, har vi lavet denne hjemmeside med 'pegeopgaver'. Opgaverne tager cirka 10-15 minutter at udføre og er skidesjove! Det ville derfor være utrolig værdsat, hvis du ville gå ind på følgende hjemmeside \url{http://www.codeit.io/bachelor/index.html} og udføre opgaverne. Deltag senest d. 27/04.
 \\Eventulle spørgsmål kan henvendes til en af os på;\\bdj816@alumni.ku.dk, hmd200@alumni.ku.dk, qgf142@alumni.ku.dk"}
@@ -37,7 +39,7 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 
 %-- Skærmbilleder af eksperiment --%
 \chapter{Skærmbilleder af eksperiment}
-
+\label{sec:screenshots}
 \begin{minipage}{\textwidth}
 \centering
 \includegraphics[width=\textwidth]{images/screenshots/ex_step_1_intro}
@@ -158,7 +160,7 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 %-- Kvalitativ analyse --%
 \newpage
 \chapter{Testdeltageres bevægelsesbaner}
-
+\label{sec:movementlines}
 \begin{minipage}{\textwidth}
 	\begin{minipage}{0.5\linewidth}
 		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_1}
@@ -240,6 +242,7 @@ For at crowdsource vores eksperiment har vi delt følgende tekst:
 %-- R-kode --%
 \newpage
 \chapter{R-kode fra analyse}
+\label{sec:r-code}
 \lstinputlisting[language=R]{main.r}
 
 \end{appendices}
