--- a/latex/main.tex
+++ b/latex/main.tex
@@ -946,6 +946,8 @@ Den kvalitative analyse bygger på 20 tilfældigt udvalgte crowdsourcingdeltager
 
 Vi ser en tendens til at testdeltagerne bruger en hovedunderbevægelse til at kommer hen mod målet, efterfulgt af en eller flere korrigerende underbevægelser for at ramme målet. Der er en tendens til at bevægelser med højere $ID$ vil have flere korrigerende underbevægelser end bevægelser med lavere $ID$. Nogle testdeltagere ser ud til første at føre markøren i en forkert retning og så derefter fører makøren mod målet. Enkelte deltagere har også enkelte opgaver, hvor de kun har en underbevægelse og ingen korrigerende bevægelser. Disse to observationer skal dog ikke ses som en generel tendens.
 
+Udfra de førnævnte tendenser kan vi opstille to hypoteser. Den første hypotese er at testdeltagerne bruger en primær underbevægelse til at bevæge markøren mod målet og en eller flere korrigerende underbevægelser for at ramme målet. Den anden hypotese er at en opgave med højere $ID$ vil resultere i flere korrigerende underbevægelser.  
+
 \begin{minipage}{\linewidth}
 	\begin{minipage}{.45\linewidth}
 		\centering
