--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -324,3 +324,12 @@
   year={2004},
   publisher={Sage Publications}
 }
+
+@inproceedings{hornbaek2014,
+  title={Is once enough?: on the extent and content of replications in human-computer interaction},
+  author={Hornb{\ae}k, Kasper and Sander, S{\o}ren S and Bargas-Avila, Javier Andr{\'e}s and Grue Simonsen, Jakob},
+  booktitle={Proceedings of the 32nd annual ACM conference on Human factors in computing systems},
+  pages={3523--3532},
+  year={2014},
+  organization={ACM}
+}
