--- a/latex/main.tex
+++ b/latex/main.tex
@@ -14,18 +14,18 @@ Human motion models for pointing tasks are used in the design of many everyday i
 	\label{fig:primepixels}
 \end{wrapfigure}
 
-Inden for menneske-datamaskine interaktion er Fitt's Lov meget udbredt som optimerings- og forbedringsværktøj ved design af brugerflader. Loven bruges til at udregne tiden det tager at flytte markøren til et element, ud fra elementets størrelse og afstanden til det. Som noteret i \cite{karafillis2012}, så kan Fitts' Lov bruges som en retningslinje når man designer brugergrænseflader - dette kunne f.eks. være til at finde størrelser og placeringer af knapper. Det er i den forbindelse vigtigt, at have kendskab til "prime pixels", som er de pixels der ligger i kanten og hjørnerne af skærmen, samt markørens nuværende position, som illustreret på figur \ref{fig:primepixels}. Disse pixels vil altid være hurtige og nemme for en person at tilgå med sin markør, enten ved at kaste markøren ud mod kanten, eller også ved at højreklikke uden at flytte sin markør. Den nemme tilgængelighed af disse pixels gør, at de ofte bliver integreret som centrale dele af brugerfladedesign. Eksempler på dette ses overalt i interaktionen med moderne styresystemer, hvor størstedelen af dem benytter sig af markørens nuværende position til at vise en menu hvis brugeren højreklikker. Der er også en tendens til at styresystemers proceslinje bliver lagt langs øvre eller nedre kant af skærmen - igen på gund af den lette tilgængelighed af disse "prime pixels" for brugeren. Fleksibiliteten af Fitts' Lov ses ved den store variation af brugerflader hvor den kan bruges, blandt andet i drop-down menuer, som beskrevet af \cite{accot1997}. Brugen af Fitt's Lov i drop-down menuer ses på figur \ref{fig:dropdown}, hvor det illustreres at der for hvert trin i menuen vil være en pegeopgave hvor Fitts' Lov kan benyttes.\\
+Inden for menneske-datamaskine interaktion er Fitt's Lov udbredt som optimerings- og forbedringsværktøj ved design af brugergrænseflader. Loven bruges til at udregne tiden det tager at flytte markøren til et element, ud fra elementets størrelse og afstanden til det. Som noteret i \cite{karafillis2012}, kan Fitts' Lov bruges som en retningslinje når man designer brugergrænseflader - f.eks. ved at finde størrelser og placeringer af knapper. Det er i den forbindelse vigtigt, at have kendskab til "prime pixels", som er de pixels der ligger i kanten og hjørnerne af skærmen, som kan tilgås ved at flytte markøren til skærmens kant hvor markøren automatisk stopper som ses på figur \ref{fig:primepixels}. Derudover er markørens nuværende position også en "prime pixel" som f.eks. kan tilgås ved at højreklikke med musen. Den nemme tilgængelighed af disse pixels gør, at de ofte bliver integreret som centrale dele af brugergrænsefladedesign. Eksempler på dette ses overalt i interaktionen med moderne styresystemer, hvor størstedelen af dem benytter sig af markørens nuværende position til at vise en menu hvis brugeren højreklikker. Der er også en tendens til at styresystemers proceslinje bliver lagt langs øvre eller nedre kant af skærmen - igen på gund af den lette tilgængelighed af disse "prime pixels" for brugeren. Fleksibiliteten af Fitts' Lov ses ved den store variation af brugergrænseflader hvor den kan bruges, blandt andet i drop-down menuer, som beskrevet af \cite{accot1997}. Brugen af Fitt's Lov i drop-down menuer ses på figur \ref{fig:dropdown}, hvor det illustreres at der for hvert trin i menuen vil være en pegeopgave hvor Fitts' Lov kan benyttes.\\
 
 \begin{wrapfigure}{l}{.35\linewidth}
 	\centering
 	\includegraphics[width=\linewidth]{images/illustrations/dropdown}
-	\caption{Illustration af navigation igennem drop-down menu, samt $w$- og $h$-etiket til at illustrere $A$ og $W$ værdierne ved brug af Fitts' Lov}
+	\caption{Illustration af navigation igennem drop-down menu}
 	\label{fig:dropdown}
 \end{wrapfigure}
 
-Siden lanceringen af den første successfulde smartphone i 2007, er der sket en voldsom udvikling i antallet af enheder der har berøringsfølsomme skærme som den primære inputmetode. Med denne udvikling har der været et behov for, at udvikle nye måder at interagere med systemerne på. De tendenser til at benytte sig af "prime pixels" i brugerfladedesign på styresystemer går igen med berøringsfølsomme skærme, da de tre største mobilstyresystemer i dag, nemlig Android, iOS og Windows Phone alle sammen benytter sig af navigationselementer der ligger i kanten af skærmen. Et eksempel på dette ses på figur \ref{fig:notifications} som viser hvordan man skal trække fingeren ned fra den øvre kant af skærmen for at tilgå de hurtige indstillinger, og se sine notifikationer. Dette er igen et godt eksempel på brugerfladedesign hvor der er taget højde for at tiden det tager at interagere med et element på skærmen skal være så kort som overhovedet muligt - især med de elementer som bruges oftest. Med den stigende tendens til at skærmene på smartphones bliver størrere, vil der være et endnu bredere behov for at optimere brugerfladerne på disse enheder så de er hurtige af benytte sig af.\\
+Siden lanceringen af den første successfulde smartphone i 2007, er der sket en stigning i antallet af enheder der har berøringsfølsomme skærme som den primære inputmetode. Med denne udvikling har der været et behov for, at udvikle nye måder at interagere med systemerne på. De tendenser til at benytte sig af "prime pixels" i brugerfladedesign på styresystemer går igen med berøringsfølsomme skærme, da de tre største mobilstyresystemer i dag, nemlig Android, iOS og Windows Phone alle benytter sig af navigationselementer der ligger i kanten af skærmen. Et eksempel på dette ses på figur \ref{fig:notifications} som viser hvordan man skal trække fingeren ned fra den øvre kant af skærmen for at tilgå de hurtige indstillinger, og se sine notifikationer. Dette er igen et godt eksempel på brugerfladedesign hvor der er taget højde for at tiden det tager at interagere med et element på skærmen skal være så kort som overhovedet muligt - især med de elementer som bruges oftest. Med den stigende tendens til at skærmene på smartphones bliver størrere, vil der være et endnu større behov for at optimere brugerfladerne på disse enheder så de er hurtige at benytte sig af.\\
 
-Selvom der ses et behov for at kunne benytte sig af Fitt's Lov på berøringsfølsomme skærme, så er det dog stadig ikke dokumenteret at denne rent faktisk kan benyttes til touch-input. Der er i løbet af de sidste to år publiceret et antal artikler om Fitts' Lov, hvor forskere er begyndt at se på, om den også kan bruges til berøringsfølsomme skærme eller øjebevægelser \cite{hong2015} \cite{zhao2015} \cite{jiang2014} \cite{greene2014}. Mens dette er interessant områder at bruge Fitt's Lov på, så er der stadig et stort behov for mere dokumentation, om hvorvidt Fitt's Lov, eller en af varianterne af den, rent faktisk kan benyttes til disse inputmetoder. Der danner sig dog et generelt billede af hvordan Fitt's Lov stadig kan være interessant at skrive om, og forske i, i dag - selvom den blev introduceret i 1954.\\
+Selvom der ses et behov for at kunne benytte sig af Fitt's Lov på berøringsfølsomme skærme, så er der dog stadig behov for mere dokumentation af at denne rent faktisk kan benyttes til touch-input. Der er i løbet af de sidste to år publiceret et antal artikler om Fitts' Lov, hvor forskere er begyndt at se på, om den også kan bruges til berøringsfølsomme skærme eller øjebevægelser \cite{hong2015} \cite{zhao2015} \cite{jiang2014} \cite{greene2014}. Mens dette er interessante områder at bruge Fitt's Lov på, så er der stadig et stort behov for mere dokumentation, om hvorvidt Fitt's Lov, eller en af varianterne af den, rent faktisk kan benyttes til disse inputmetoder. Der danner sig dog et generelt billede af hvordan Fitt's Lov stadig kan være interessant at skrive om, og forske i, i dag - selvom den blev introduceret i 1954.\\
 
 \begin{wrapfigure}{r}{.35\linewidth}
 	\centering
@@ -34,15 +34,15 @@ Selvom der ses et behov for at kunne benytte sig af Fitt's Lov på berøringsfø
 	\label{fig:notifications}
 \end{wrapfigure}
 
-Siden udgivelsen af Fitts' originale artikel der beskrev hans forsøg, og udledte formel deraf, har flere andre udgivelser foreslået ændringer, som kunne forbedre Fitts' Lov. Den første udgivelse som ville ændre Fitts' Lov var \cite{welford1968}, hvor Alan T. Welford foreslog nogle teoretiske ændringer til Fitts' Lov, ud fra sine observationer af Fitts' indsamlede data. Både Fitts og Welford beskrev formuleringerne ud fra et rent menneskeligt motorisk synspunkt, men i slutningen af 70'erne begyndte menneske-datamaskine interaktionsforskere at interessere sig for emnet, blandt andet med udgivelsen af \cite{card1978}. Siden da foreslog David E. Meyer af to omgange, \cite{meyer1988} \& \cite{meyer1990}, nogle fundamentale ændringer til den bagvedliggende model for Fitts' Lov. Dette førte til en variant af Fitts' Lov, som baserede sig på et $ID$ (opgavens sværhedsgrad) som indeholdte kvadratrod i stedet for den originale variant med logaritme. Meyer lavede først en række beregninger på data fra Fitts' forsøg, hvilket viste at hans formulering passede bedre på den indsamlede data. Herefter lavede han nogle simple forsøg, hvor testpersoner lavede simple håndledsbevægelser. Disse viste igen, at den nye variant passede bedre til den indsamlede data.
+Siden udgivelsen af Fitts' originale artikel der beskrev hans forsøg, og udledte formel deraf, har flere andre udgivelser foreslået ændringer, som kunne forbedre Fitts' Lov. Den første udgivelse som ville ændre Fitts' Lov var \cite{welford1968}, hvor Alan T. Welford foreslog nogle ændringer til Fitts' Lov, ud fra sine observationer af Fitts' indsamlede data. Både Fitts og Welford beskrev formuleringerne ud fra et rent menneskeligt motorisk synspunkt, men i slutningen af 70'erne begyndte menneske-datamaskine interaktionsforskere at interessere sig for emnet, blandt andet med udgivelsen af \cite{card1978}. Siden da foreslog David E. Meyer af to omgange, \cite{meyer1988} \& \cite{meyer1990}, nogle fundamentale ændringer til den bagvedliggende model for Fitts' Lov. Dette førte til en variant af Fitts' Lov, hvor sværhedsgraden var beskrevet ud fra en kvadratrod og ikke en logaritmisk funktion. Meyer lavede først en række beregninger på data fra Fitts' forsøg, hvilket viste at hans formulering passede bedre på den indsamlede data. Herefter lavede han nogle forsøg, hvor testpersoner lavede simple håndledsbevægelser. Disse viste igen, at den nye variant passede bedre til den indsamlede data.
 
-I 1992 udgav Scott MacKenzie artiklen \cite{mackenzie1992}, hvori han beskrev en ny variant af Fitts' Lov. Denne variant udviser samme form som Shannon's Sætning \cite{goldberg2015} og er siden blevet accepteret som den mest udbredte \cite{guiard2011}. MacKenzie udførte beregninger på data fra allerede udførte forsøg og viste at hans formulering ville passe bedre på de tidligere indsamlede data. På trods af, at MacKenzie viste at hans formulering passede bedst på data fra tidligere forsøg, så har både \cite{drewes2010} og \cite{goldberg2015} vist at alle fire formuleringer ikke nødvendigvis passer til alle tilfælde af opgavers sværhedsgrader. Specielt noterede \cite{goldberg2015} at det kom an på sværhedsgraden, hvilken formulering der skulle bruges. MacKenzies var bedst at bruge ved opgaver med høje sværhedsgrader, mens Meyers viste sig at være bedst anvendelig ved opgaver med lavere sværhedsgrader.\\
+I 1992 udgav Scott MacKenzie artiklen \cite{mackenzie1992}, hvori han beskrev en ny variant af Fitts' Lov. Denne variant udviser samme form som Shannon's Sætning \cite{goldberg2015} og er siden blevet accepteret som den mest udbredte \cite{guiard2011}. MacKenzie udførte beregninger på data fra allerede udførte forsøg og viste at hans formulering ville passe bedre på de tidligere indsamlede data. På trods af, at MacKenzie viste at hans formulering passede bedst på data fra tidligere forsøg, så har både \cite{drewes2010} og \cite{goldberg2015} vist at alle fire formuleringer ikke nødvendigvis passer til alle tilfælde af opgavers sværhedsgrader. Specielt noterede \cite{goldberg2015} at det kom an på sværhedsgraden, hvilken formulering der skulle bruges. MacKenzies var bedst at bruge ved opgaver med høje sværhedsgrader, mens Meyers viste sig at være bedst anvendelig ved opgaver med lave sværhedsgrader.\\
 
 Men med dette flertal af variationer over Fitts' Lov, beskriver \cite{drewes2010} en tendens til at de publicerede artikler der benytter sig af Fitts' Lov, vælger den formulering der passer bedst på deres data, da de ikke beskriver selve udvælgelsesprocessen. Dette bliver i artiklen beskrevet som et problem, og der ses et behov for en konsolidering, nemlig at der bliver defineret en standardmodel og en standardvariation af Fitts' Lov inden for HCI. Denne standardisering vil gøre det nemmere for forskere, der vil kunne referere til  standardmodellen uden at skulle retfærdiggøre sit valg af formulering af Fitts' Lov.\\
 
-Vi vil i denne rapport udføre to forsøg hvis formål er at indsamle og analysere data for bevægelser med mus eller touchpad, netop for at sammenligne forskellige varianter af Fitts' Lov. Vores forsøg vil være en genskabelse af forsøg udført af \cite{accot1997, goldberg2015}, og vil bestå af et kontrolleret laboratorieeksperiment, og et ukontrolleret onlineeksperiment. Det kontrollerede laboratorieeksperiment er medtaget for at sikre en kontrolleret indsamling af data, som derved kan vise om vi også kan benytte data indsamlet fra vores onlineeksperiment.\\
+Vi vil i denne rapport udføre to forsøg hvis formål er at indsamle og analysere data for bevægelser med mus eller andet, for at sammenligne forskellige varianter af Fitts' Lov. Vores forsøg vil være en genskabelse af forsøg udført af \cite{accot1997, goldberg2015}, og vil bestå af et kontrolleret laboratorieeksperiment, og et ukontrolleret onlineeksperiment. Det kontrollerede laboratorieeksperiment er medtaget for at sikre en kontrolleret indsamling af data, som derved kan vise om vi også kan benytte data indsamlet fra vores onlineeksperiment.\\
 
-Begrundelsen for at genskabe disse tidligere udførte forsøg, ses i \cite{hornbaek2014} som beskriver en mangel på genskabelse af forsøg inden for menneske-datamaskine interaktion. \cite{hornbaek2014} gennemgår 891 artikler fra forskellige publikationer, og ser en reproducering af tidligere forsøg på små $3\%$. Denne mangel på reproducering af forsøg, er især relevant ved større opdagelser inden for menneske-datamaskine interaktion. Vi håber derfor at vores rapport kan belyse disse tidligere forsøg, og be- eller afkræfte deres konklusioner.
+Begrundelsen for at genskabe disse tidligere udførte forsøg, ses i \cite{hornbaek2014} som beskriver en mangel på genskabelse af forsøg inden for menneske-datamaskine interaktion. \cite{hornbaek2014} gennemgår 891 artikler fra forskellige publikationer, og ser en reproducering af tidligere forsøg på $3\%$. Denne mangel på reproducering af forsøg, er især relevant ved større opdagelser inden for menneske-datamaskine interaktion.
 
 \addcontentsline{toc}{section}{Forventninger til læseren}
 \section*{Forventninger til læseren}
