--- a/latex/main.tex
+++ b/latex/main.tex
@@ -987,6 +987,21 @@ Udfra de førnævnte tendenser kan vi opstille to hypoteser. Den første hypotes
 	\label{tab:persons_average}
 \end{table}
 
+\begin{table}[h]
+	\centering
+	\begin{tabular}{llllll}
+		Alder            & Køn                  & Computerspil                & Computere                    & Hånd                   & Pegeenhed            \\\hline
+		gns: \hfill24.95 & mand: \hfill90.91\%  & $<1$ time: \hfill18.18\%    & $<1$ time: \hfill0\%         & venstre: \hfill18.18\% & mus: \hfill50\%      \\
+		min: \hfill17    & kvinde: \hfill9.09\% & $1-5$ timer: \hfill27.27\%  & $1-5$ timer: \hfill0\%       & højre: \hfill81.82\%   & touchpad: \hfill50\% \\
+		max: \hfill41    &                      & $5-15$ timer: \hfill40.91\% & $5-15$ timer: \hfill0\%      &                        &                      \\
+		                 &                      & $15-40$ timer: \hfill9.09\% & $15-40$ timer: \hfill31.82\% &                        &                      \\
+		                 &                      & $>40$ timer: \hfill4.55\%   & $>40$ timer: \hfill68.18\%   &                        &
+	\end{tabular}
+	\caption{Tabel med oversigt over gennemsnitsværdier og fordeling af testpersoners valg i spørgeskemaet.}
+	\label{tab:persons_average}
+\end{table}
+
+
 For at kunne analysere de indsamlede data, har vi valgt at lave nogle beregninger på vores data som kan bruges til at lave en kvantitativ analyse. Ud fra de indsamlede data har vi udregnet farten i de individuelle punkter i vores data, som vi har brugt til at illustrere fartudviklingen over fire tilfældigt udvalgte tests som kan ses på figur \ref{fig:plot_speed_overall}.
 
 Det ses på figur \ref{fig:plot_speed_overall} at der er en tendens til at farten har én primær stigning omkring midten af distancen, som kan beskrives som en hovedbevægelse, hvori der accelereres mod målet - dette tydeliggøres af figur \ref{fig:plot_velocity_individual} som illustrerer hastighedsprofilen for en anden tilfældig testdeltager. Der ses også en tendens til, at nogle af testpersonerne laver små hastighedsstigninger efter hovedstigningen, hvilket illustrerer de korrigerende underbevægelser som beskrevet tidligere i rapporten og i \cite{meyer1988}.\\
